--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.DependencyInjectionExempleApp"
         tools:targetApi="31">
         <activity
-            android:name=".QuestionsDetailActivity"
+            android:name=".detailsQuestion.QuestionsDetailActivity"
             android:exported="false" />
         <activity
             android:name=".QuestionsListActivity"
